完善了评论子评论功能、私信功能，并修复了关注功能bug